Fix ServiceConfigurationTest cases